update gradle to remove warnings (regarding future use of 7.0)